error handling & data val
